force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/Apttus_Approval__ApprovalsSystemProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Approvals System properties</description>
    <label>Approvals System Properties</label>
</CustomObject>