force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__ApprovalProcessListViewObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalProcessListViewObject__c</fullName>
    <description>Specifies the API name of the business object type which is displayed in the approvals processes list view pick list.</description>
    <inlineHelpText>Specifies the API name of the business object type which is displayed in the approvals processes list view pick list.</inlineHelpText>
    <label>Approval Process List View Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>