force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__ApprovalTaskPrefix__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalTaskPrefix__c</fullName>
    <description>The prefix for the approval history subject.</description>
    <label>Approval Task Prefix</label>
    <length>30</length>
    <type>Text</type>
</CustomField>