force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__BackupAdminProfile__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BackupAdminProfile__c</fullName>
    <description>The backup admin profile name</description>
    <label>Backup Admin Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>