force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__BackupAdminUser__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
    <description>The backup admin user name</description>
    <label>Backup Admin User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>