force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__BackupFilterPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BackupFilterPage__c</fullName>
    <description>The custom page to filter and select a backup user</description>
    <label>Backup Filter Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>