force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__BypassSharing__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BypassSharing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether apex code can bypass record sharing</description>
    <inlineHelpText>Indicates whether apex code can bypass record sharing</inlineHelpText>
    <label>Bypass Sharing</label>
    <type>Checkbox</type>
</CustomField>