force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__CancellationEmailToApprovedNotified__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__CancellationEmailToApprovedNotified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is true then we to send cancellation emails for Approved/Notified requests when approval requests are recalled.</description>
    <inlineHelpText>If this flag is true then we to send cancellation emails for Approved/Notified requests when approval requests are recalled.</inlineHelpText>
    <label>Cancellation Email to Approved/Notified</label>
    <type>Checkbox</type>
</CustomField>