force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EmailApprovalServiceAddress__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EmailApprovalServiceAddress__c</fullName>
    <description>The email service address that can receive messages for processing.</description>
    <label>Email Approval Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>