force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EmailSenderDisplayName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EmailSenderDisplayName__c</fullName>
    <description>Indicates the datasource for the email sender display name. If not set, defaults to the name of the requester for agreements and defaults to the name of the submitter for all others. 

Valid values are : 
============= 
Approver 
Requester 
Submitter</description>
    <inlineHelpText>Indicates the datasource for the email sender display name. If not set, defaults to the name of the requester for agreements and defaults to the name of the submitter for all others.

Valid values are : 
============= 
Approver 
Requester 
Submitter</inlineHelpText>
    <label>Email Sender Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>