force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EmailSenderOrgWideDisplayName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EmailSenderOrgWideDisplayName__c</fullName>
    <description>Indicates the display name from the Organization-Wide Email Addresses to use for the email sender.</description>
    <inlineHelpText>Indicates the display name from the Organization-Wide Email Addresses to use for the email sender.</inlineHelpText>
    <label>Email Sender Org Wide Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>