force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EmailSenderOrgWideDisplayNameUsed__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EmailSenderOrgWideDisplayNameUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to true to send emails with the sender specified in the &apos;Email Sender Org Wide Display Name&apos; custom setting.</description>
    <inlineHelpText>Set this flag to true to send emails with the sender specified in the &apos;Email Sender Org Wide Display Name&apos; custom setting.</inlineHelpText>
    <label>Email Sender Org Wide Display Name Used</label>
    <type>Checkbox</type>
</CustomField>