force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EnableApprovalRequestAutoEscalation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EnableApprovalRequestAutoEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this field to true to have approval requests currently assigned or reassigned automatically escalated to another user or queue if no actions have been taken after a specified time.</description>
    <inlineHelpText>Set this field to true to have approval requests currently assigned or reassigned automatically escalated to another user or queue if no actions have been taken after a specified time.</inlineHelpText>
    <label>Enable Approval Request Auto-Escalation</label>
    <type>Checkbox</type>
</CustomField>