force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EnableAutoReapprovalOnFinalizedCart__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EnableAutoReapprovalOnFinalizedCart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Setting this flag to true allows previous approvals from the finalized cart to be included in the check for auto-reapproval, otherwise re-approvals start from scratch on the new cart object.</description>
    <inlineHelpText>Setting this flag to true allows previous approvals from the finalized cart to be included in the check for auto-reapproval, otherwise re-approvals start from scratch on the new cart object.</inlineHelpText>
    <label>Enable Auto-Reapproval On Finalized Cart</label>
    <type>Checkbox</type>
</CustomField>