force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EnableEmailApprovalResponse__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EnableEmailApprovalResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling email approval response lets users reply to email approval requests by typing APPROVE or REJECT in the first line and adding comments in the second line.</description>
    <inlineHelpText>Enabling email approval response lets users reply to email approval requests by typing APPROVE or REJECT in the first line and adding comments in the second line.</inlineHelpText>
    <label>Enable Email Approval Response</label>
    <type>Checkbox</type>
</CustomField>