force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EnableResubmit__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EnableResubmit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This property is used for the submit for approvals button on the related list. When true, and user clicks on submit, current approval requests are cancelled and new approval requests are resubmitted. When false, and user clicks on submit, this flag will prevent the user from canceling and resubmitting an on-going approval process.</description>
    <inlineHelpText>Used for the submit for approvals button on the related list. 
When true, current approval requests are cancelled and new requests are resubmitted. 
When false, will prevent the user from canceling and resubmitting an on-going approval process.</inlineHelpText>
    <label>Enable Resubmit</label>
    <type>Checkbox</type>
</CustomField>