force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__EnableUploadAttachmentFromDesktop__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EnableUploadAttachmentFromDesktop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables user to upload attachments from the desktop instead of limiting attachments to those already associated with the object in the Notes &amp; Attachments section.</description>
    <inlineHelpText>Enables user to upload attachments from the desktop instead of limiting attachments to those already associated with the object in the Notes &amp; Attachments section.</inlineHelpText>
    <label>Enable Upload Attachment From Desktop</label>
    <type>Checkbox</type>
</CustomField>