force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__InboundAttachmentCallback__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__InboundAttachmentCallback__c</fullName>
    <description>Inbound attachment callback class name. The class should implement the CustomClass.IInboundAttachmentCallback interface.</description>
    <inlineHelpText>Inbound attachment callback class name. The class should implement the CustomClass.IInboundAttachmentCallback interface.</inlineHelpText>
    <label>Inbound Attachment Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>