force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__InstanceUrl__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__InstanceUrl__c</fullName>
    <description>The Salesforce instance url for redirecting to custom pages</description>
    <label>Instance Url</label>
    <type>Url</type>
</CustomField>