force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__ProcessSubmitInAsyncMode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcessSubmitInAsyncMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Process preview and submit approval actions asynchronously in the background.</description>
    <inlineHelpText>Process preview and submit approval actions asynchronously in the background.</inlineHelpText>
    <label>Process Preview/Submit Asynchronously</label>
    <type>Checkbox</type>
</CustomField>