force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__ReassignFilterPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ReassignFilterPage__c</fullName>
    <description>The custom page to filter and select a reassign user</description>
    <label>Reassign Filter Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>