force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__ReassignMyApprovalsFilterPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ReassignMyApprovalsFilterPage__c</fullName>
    <description>DEPRECATED.  The custom page to filter and select a reassign user from the MyApprovals view.</description>
    <inlineHelpText>DEPRECATED.  The custom page to filter and select a reassign user from the MyApprovals view.</inlineHelpText>
    <label>Reassign My Approvals Filter Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>