force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__SyncApproveRequestThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SyncApproveRequestThreshold__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Process approve and reject approval actions asynchronously in the background when the number of actions to perform is more than this threshold count.</description>
    <inlineHelpText>Process approve and reject approval actions asynchronously in the background when the number of actions to perform is more than this threshold count.</inlineHelpText>
    <label>Process Approve/Reject Asynchronously</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>