force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__SyncSubmitRequestThreshold__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SyncSubmitRequestThreshold__c</fullName>
    <defaultValue>200</defaultValue>
    <description>DEPRECATED. Approval Request count threshold, exceeding which submit will be processed in batch/async mode</description>
    <inlineHelpText>DEPRECATED. Approval Request count threshold, exceeding which submit will be processed in batch/async mode</inlineHelpText>
    <label>Sync Submit Request Threshold-DEPRECATED</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>