force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_Approval__UICustomAssigneeObjectTypes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__UICustomAssigneeObjectTypes__c</fullName>
    <description>The field specifies a comma separated list of API names of Standard or Custom objects you want to use to when defining custom assignee expressions</description>
    <inlineHelpText>The field specifies a comma separated list of API names of Standard or Custom objects you want to use to when defining custom assignee expressions</inlineHelpText>
    <label>UI Custom Assignee Object Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>