force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_CQApprov__CartApprovalPreviewPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__CartApprovalPreviewPage__c</fullName>
    <description>The name of a custom page used to show preview information. Leave it blank to use the default page.</description>
    <inlineHelpText>The name of a custom page used to show preview information. Leave it blank to use the default page.</inlineHelpText>
    <label>Cart Approval Preview Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>