force-app/main/default/objects/Apttus_Approval__ApprovalsSystemProperties__c/fields/Apttus_CQApprov__EnableApprovalCheckOnQuoteUpdate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__EnableApprovalCheckOnQuoteUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether approval check should performed automatically when a quote updated</description>
    <inlineHelpText>Indicates whether approval check should performed automatically when a quote updated</inlineHelpText>
    <label>Enable Approval Check On Quote Update</label>
    <type>Checkbox</type>
</CustomField>